Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -19,7 +19,7 @@
 
 % \input{sec/acks}  % double blind review
 %\bibliographystyle{plain}
-%\bibliography{references}
+\bibliography{refs}
 %\printbibliography
 
 \end{document}
