--- a/preamble.tex
+++ b/preamble.tex
@@ -163,8 +163,8 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
 
-\newcommand\bc{\textbf{bc}}
-\newcommand\bto{\textbf{bto}}
-\newcommand\abf{\textbf{abf}}
-\newcommand\arc{\textbf{arc}}
-\newcommand\awo{\textbf{awo}}
+\newcommand\bc{\textbf{bc}\xspace}
+\newcommand\bto{\textbf{bto}\xspace}
+\newcommand\abf{\textbf{abf}\xspace}
+\newcommand\arc{\textbf{arc}\xspace}
+\newcommand\awo{\textbf{awo}\xspace}
