--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -785,7 +785,7 @@ In this section we quantitatively compare the bug-finding capabilities of DeepSm
   \caption{%
     % CLSmith total ``interesting'': 19415
     % DeepSmith total ``interesting'': 8272
-    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\bc), build timeout (\bto), build failure (\abf), runtime crash (\arc), wrong-output (\awo), and pass (\textbf{\cmark}) results. \cc{remove ``Total'' row for submission}%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\bc), build timeout (\bto), build failure (\abf), runtime crash (\arc), wrong-output (\awo), and pass (\textbf{\cmark}) results.
   }
   \label{tab:megatable}
 \end{table*}
@@ -994,4 +994,4 @@ Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for th
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
 Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. We have submitted bug reports for each of the three assertions in LLVM 6.0.0, and two distinct unreachables.
 
-The results emphasize that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases.
+The results emphasize that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases. \cc{If we could use this to leverage the case for low cost fuzzer development, I think this would be a nice closer.}
